fix 13372 (NPE RelationshipTracker#getRelationshipType)
BottomBar.java
- method getTerritoryLabelTextPattern: Switch territory to territoryOwner to get data
- method updateTerritoryInfo: From .length() > 0 to !.isEmpty()
- methods ownerChanged and attachmentChanged: comment for why empty